Revision history for HTTP-Message

{{$NEXT}}

6.13      2017-06-20 01:07:03Z
    - Non-TRIAL release of changes found in 6.12

6.12      2017-06-15 18:03:50Z (TRIAL RELEASE)
    - If an object is passed to HTTP::Request, it must provide a canonical()
      method (Olaf Alders)
    - Make sure status messages don't die by checking the status exists before
      checking the value range (Kent Fredric, GH #39)
    - Add a .mailmap file to clean up the contributors list
    - Avoid inconsistent setting of content to undef (Jerome Eteve)
    - Simplify the way some methods are created (Tom Hukins)
    - Remove some indirect object notation (Chase Whitener)
    - Fix example in Pod (Tobias Leich)
    - Add support for HTTP PATCH method (Mickey Nasriachi)

6.11   2015-09-09
    - fix an undefined value warning in HTTP::Headers::as_string

6.10   2015-07-19
    - fix uses of qr/.../m in tests that do not work in 5.8.x

6.09   2015-07-19
    - converted all uses of Test.pm to Test::More
    - fix uninitialized warning in HTTP::Config (RT#105929)

6.08   2015-07-10
    - Resolve new uninitialized warning from
      HTTP::Request::Common::request_type_with_data (RT#105787)

6.07   2015-07-09
    - Allow subclasses to override the class of parts - it used to be hardcoded
      to HTTP::Message. (Gisle Aas, RT#79239)
    - Added support for is_client_error, is_server_error to HTTP::Response
      (Karen Etheridge)
    - Added flatten interface to HTTP::Headers (Tokuhiro Matsuno, GH#5)
    - Allow PUT to pass content data via hashrefs just like with POST (Michael
      Schilli, GH#9)
    - Fix for "Content-Encoding: none" header (Gisle Aas, RT#94882)
    - Add support for HTTP status 308, defined in RFC 7238 (Olivier Mengué,
      RT#104102)
    - drop the use of "use vars" (Karen Etheridge)

6.06    2012-10-21
    - More forgiving test on croak message [RT#80302] (Gisle Aas)
    - Added test for multipart parsing (Gisle Aas)